# verify

./: .env  .gitignore  .gitmodules  Cargo.toml  Makefile  bootloader_proof.json  docker-compose.yml  readme.md  snos_output.json
contract/: dojo_dev.toml
output/snos-output/: 11-all_cairo-output.json  24-output.json  output.json
src/: fact_info.rs  fact_node.rs  fact_topology.rs  main.rs  utils.rs
