[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[dependencies]
prove_block = { git = "https://github.com/keep-starknet-strange/snos", rev = "662d1706f5855044e52ebf688a18dd80016c8700" }
cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notlesh/segment-arena-relocation-fix", features = [
    "cairo-1-hints",
    "extensive_hints",
    "mod_builtin",
] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"
