[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[dependencies]
prove_block = { git = "https://github.com/Tranduy1dol/snos", branch = "td1d/new" }
cairo-vm = { git = "https://github.com/Tranduy1dol/cairo-vm", branch = "td1d/new", features = [
    "cairo-1-hints",
    "extensive_hints",
    "mod_builtin",
] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"
starknet = "0.12.0"